<resources>
    <string name="app_name">simpleUi</string>
    <string name="prompt_phone">Номер телефона</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Телефонный номер введен неверно</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_field_required">Это обязательное поле</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="registration_steps">Для регистрации введите Ваш мобильный номер и придумайте пароль.</string>
    <string name="repeat_password">Повторный ввод пароля</string>
    <string name="next">Далее</string>
    <string name="activity_image_trans">activity_image_trans</string>
    <string name="ok">ОК</string>
    <string name="wrong_username_password">Неверная пара телефон-пароль</string>
    <string name="authorization_success">Авторизация прошла успешно!</string>
    <string name="cancel">Отмена</string>
    <string name="release">Дата выхода</string>
    <string name="save">Сохранить</string>
    <string name="description">Описание</string>
    <string name="lang">Язык оригинала</string>
    <string name="user_exist">Пользователь с таким именем уже существует!</string>
    <string name="register_success">Вы успешно зарегистрировались!</string>
    <string name="add_element">Добавить элемент</string>
    <string name="country_code">Код страны</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="more_action">Детальнее</string>
    <string name="deleting">Удаление</string>
    <string name="delete_confirmation">Вы действительно хотите удалить этот элемент?</string>
    <string name="element_deleted">Элемент успешно удален</string>
    <string name="element_deleting">Удаление елемента</string>
    <string name="no_file">Нет файла</string>
    <string name="_18">Только 18+</string>
    <string name="name">Название</string>
    <string name="to_edit">Редактировать</string>
    <string name="element_saved">Элемент сохранен!</string>
</resources>
