<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nice_snow_2"
    android:layout_height="wrap_content">

       <Button
           android:id="@+id/more"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/more_action"
           android:background="@color/transparent"/>

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/transparent"/>

</LinearLayout>