<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nice_snow_2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/medium_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_createTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small_padding"
                            android:gravity="center"
                            android:padding="@dimen/small_padding"
                            android:textSize="@dimen/medium_text" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_style"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/small_padding"
                            android:paddingLeft="@dimen/small_padding"
                            android:paddingStart="@dimen/small_padding"
                            android:text="@string/name"
                            android:textSize="@dimen/medium_text" />

                        <EditText
                            android:id="@+id/editText_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:hint="..."
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:minLines="1"
                            android:paddingLeft="@dimen/small_padding"
                            android:paddingStart="@dimen/small_padding"
                            android:selectAllOnFocus="true"
                            android:textSize="@dimen/medium_text" />

                    </LinearLayout>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:paddingTop="@dimen/medium_padding">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/small_padding"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_style"
                        android:orientation="vertical"
                        android:padding="@dimen/small_padding">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/small_padding"
                            android:src="@drawable/nice_snow_2" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small_padding"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/small_padding">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small_padding"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_style"
                            android:orientation="vertical"
                            android:padding="@dimen/small_padding">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/small_padding"
                                android:text="@string/release"
                                android:textSize="@dimen/medium_text" />

                            <Button
                                android:id="@+id/button_deadline"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:gravity="start|center_vertical"
                                android:minHeight="48dp"
                                android:paddingLeft="8dp"
                                android:text="DD.MM.YYYY"
                                android:textSize="@dimen/medium_text" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small_padding"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_style"
                            android:orientation="vertical"
                            android:padding="@dimen/small_padding">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/small_padding"
                                android:text="@string/lang"
                                android:textSize="@dimen/medium_text" />

                            <Spinner
                                android:id="@+id/spinner_lang"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical|center_horizontal"
                                android:minHeight="48dp"
                                android:selectAllOnFocus="true"
                                android:textSize="@dimen/medium_text" />
                        </LinearLayout>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_padding">


                    <Switch
                        android:id="@+id/adult"
                        android:background="@drawable/edit_text_style"
                        android:padding="@dimen/medium_padding"
                        android:text="@string/_18"
                        android:textSize="@dimen/medium_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_padding">


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/medium_padding">


                    <RatingBar
                        android:id="@+id/ratingBar_default"
                        style="?android:attr/ratingBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/medium_padding"
                        android:background="@drawable/edit_text_style"
                        android:numStars="5" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_padding">


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/small_padding"
                            android:text="@string/description"
                            android:textSize="@dimen/medium_text" />

                        <EditText
                            android:id="@+id/editText_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_style"
                            android:gravity="left|start"
                            android:hint="..."
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:minLines="6"
                            android:paddingLeft="@dimen/medium_padding"
                            android:selectAllOnFocus="true"
                            android:textSize="@dimen/medium_text" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_padding">

                    <TextView
                        android:id="@+id/file_path"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/small_padding"
                        android:layout_weight="4"
                        android:text="@string/no_file"
                        android:textSize="@dimen/medium_text" />

                    <ImageButton
                        android:id="@+id/attach"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:layout_weight="1"
                        android:src="@android:drawable/ic_menu_add" />


                </TableRow>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="@dimen/medium_padding"
        android:layout_marginRight="@dimen/medium_padding"
        android:background="@drawable/edit_text_style"
        android:text="@string/save"
        android:textSize="@dimen/medium_text" />

</LinearLayout>